# EM-DeSTIN

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Common/: CMakeLists.txt  DestinNetworkAlt.h  Makefile  cmake_install.cmake  node.h  testCifarSource  testDestinNetworkAlt  unit_test.h
EMDestin/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
EMDestin/include/: destin.h  em.h
EMDestin/src/: #destin.cpp#  destin.cpp  em.cpp  node.cpp  util.cpp
EMDestin/test/: test  test.cpp
EMdestin_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test2
EMdestin_test/include/: stereocamera.h  stereovision.h
EMdestin_test/src/: stereocamera.cpp  stereovision.cpp  test2.cpp
SOM/: Makefile  cmake_install.cmake  testSOM
SOM/cluster/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  TODO  config.h.in  configure  configure.ac  setup.py
SOM/cluster/X11/: Makefile.am  Makefile.in  format.xpm  gui.c
SOM/cluster/doc/: Makefile  cluster.texinfo  cluster3.texinfo  structure.eps
SOM/cluster/example/: Makefile  README  example.c
SOM/cluster/html/: Bibliography.html  Cluster.html  Command.html  Contents.html  Data.html  Development.html  Distance.html  Hierarchical.html  Introduction.html  KMeans.html  Makefile  PCA.html  SOM.html  TreeView.html  index.html  mac.py
SOM/cluster/mac/: Cluster.pmproj  Controller.h  Controller.m  Info.plist  Makefile  cluster.icns  main.m
SOM/cluster/mac/Cluster.xcodeproj/: project.pbxproj
SOM/cluster/mac/English.lproj/: InfoPlist.strings
SOM/cluster/mac/English.lproj/AboutPanel.nib/: classes.nib  info.nib  keyedobjects.nib
SOM/cluster/mac/English.lproj/FileFormatPanel.nib/: classes.nib  info.nib  keyedobjects.nib
SOM/cluster/mac/English.lproj/MainMenu.nib/: classes.nib  info.nib  keyedobjects.nib
SOM/cluster/perl/: Cluster.pm  typemap
SOM/cluster/perl/t/: 02_matrix_parse.t
SOM/cluster/python/: MANIFEST.python  __init__.py
SOM/cluster/python/test/: README  test.py  test_Cluster.py
SOM/cluster/src/: Makefile.am  Makefile.in  cluster.c  command.c  command.h  data.c  gui.h  main.c
SOM/cluster/windows/: Makefile  cluster.hhp  cluster.iss  gui.c  main.c  resources.h  resources.rc
